--- a/css/styles.css
+++ b/css/styles.css
@@ -9,3 +9,9 @@ COLOR PALLETE
 #232323
 ##ff5a6e
 */
+
+* {
+    font-family: "Roboto Condensed", sans-serif;
+    margin: 0%;
+    padding: 0%;
+  }
