--- a/css/styles.css
+++ b/css/styles.css
@@ -19,3 +19,22 @@ COLOR PALLETE
   body {
     text-align: center;
   }
+
+  .nav-item:hover {
+    font-size: 1.2em;
+  }
+
+  .contact-us {
+    border: 1px solid black;
+    background-color: #CC3636;
+    border-radius: 4px;
+    list-style-type: none;
+    text-decoration: none;
+  }
+
+  .contact-us:hover {
+    color: black;
+    text-decoration: none;
+    padding: 2px;
+    font-size: 1.2em;
+  }
