add z-index 1 to header container to bring to front of video montage

--- a/css/styles.css
+++ b/css/styles.css
@@ -63,5 +63,8 @@ COLOR PALLETE
     transform: translateX(-50%) translateY(-50%);
   }
 
-  
+  header .container {
+    position: relative;
+    z-index: 2;
+  }
   
