--- a/css/styles.css
+++ b/css/styles.css
@@ -67,4 +67,15 @@ COLOR PALLETE
     position: relative;
     z-index: 2;
   }
+
+  .montage-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background-color: black;
+    opacity: 0.5;
+    z-index: 1;
+  }
   
