add 50px margin-bottom on all section-heading class

--- a/css/styles.css
+++ b/css/styles.css
@@ -128,3 +128,8 @@ section {
   position: absolute;
   width: 50px;
 }
+
+.sections-heading {
+    margin-bottom: 50px;
+    overflow: hidden;
+    }
