--- a/css/styles.css
+++ b/css/styles.css
@@ -130,6 +130,21 @@ section {
 }
 
 .sections-heading {
-    margin-bottom: 50px;
-    overflow: hidden;
+  margin-bottom: 50px;
+  overflow: hidden;
+}
+
+.team-area .item .item-content .team-overlay {
+    top: -100%;
+    left: 0;
+    margin: 0px;
+    position: absolute;
+    text-align: center;
+    -webkit-transition: all 0.35s ease-in-out;
+    -moz-transition: all 0.35s ease-in-out;
+    -ms-transition: all 0.35s ease-in-out;
+    -o-transition: all 0.35s ease-in-out;
+    transition: all 0.35s ease-in-out;
+    width: 100%;
+    z-index: 1;
     }
