--- a/css/styles.css
+++ b/css/styles.css
@@ -135,16 +135,57 @@ section {
 }
 
 .team-area .item .item-content .team-overlay {
-    top: -100%;
-    left: 0;
-    margin: 0px;
-    position: absolute;
-    text-align: center;
-    -webkit-transition: all 0.35s ease-in-out;
-    -moz-transition: all 0.35s ease-in-out;
-    -ms-transition: all 0.35s ease-in-out;
-    -o-transition: all 0.35s ease-in-out;
-    transition: all 0.35s ease-in-out;
-    width: 100%;
-    z-index: 1;
-    }
+  top: -200%;
+  left: 0;
+  margin: 0px;
+  position: absolute;
+  text-align: center;
+  -webkit-transition: all 0.35s ease-in-out;
+  -moz-transition: all 0.35s ease-in-out;
+  -ms-transition: all 0.35s ease-in-out;
+  -o-transition: all 0.35s ease-in-out;
+  transition: all 0.35s ease-in-out;
+  width: 100%;
+  z-index: 1;
+}
+
+.team-area .item:hover .item-content .team-overlay {
+  top: 50%;
+  transform: translate(-50%, -50%);
+  left: 50%;
+}
+
+.team-area .team-items .item:hover .item-content::after {
+  opacity: 1; /*Opacity of alt images in teams section*/
+}
+
+.team-area .item-container {
+  margin-bottom: 30px;
+}
+
+.team-area .item .item-content {
+  position: relative;
+  overflow: hidden;
+  z-index: 1;
+}
+
+.team-area .item .item-content .team-overlay p {
+  /*alt-text color*/
+  color: #ffffff;
+}
+
+.team-area .item .item-content::after {
+  background: #232323 none repeat scroll 0 0;
+  content: "";
+  height: 100%;
+  left: 0;
+  opacity: 0;
+  position: absolute;
+  top: 0;
+  transition: all 0.35s ease-in-out;
+  -webkit-transition: all 0.35s ease-in-out;
+  -moz-transition: all 0.35s ease-in-out;
+  -ms-transition: all 0.35s ease-in-out;
+  -o-transition: all 0.35s ease-in-out;
+  width: 100%;
+}
