--- a/css/styles.css
+++ b/css/styles.css
@@ -213,6 +213,17 @@ section {
     margin-bottom: 30px;
   }
 
+  .bottom {
+    padding-top: 20px;
+  }
+  
+  footer {
+    width: 100%;
+    background-color: black;
+    color: white;
+    height: 20px;
+  }
+
 
 /* Media Query CSS for x.small screen size */
 @media only screen and (max-width: 480px) {
