--- a/css/styles.css
+++ b/css/styles.css
@@ -237,6 +237,10 @@ footer {
   background-color: #367e18;
 }
 
+.card-body {
+    border: none;
+  }
+
 /* Media Query CSS for x.small screen size */
 @media only screen and (max-width: 480px) {
   h1 {
