--- a/css/styles.css
+++ b/css/styles.css
@@ -251,6 +251,10 @@ footer {
   padding-bottom: 30px;
 }
 
+.events-section {
+  margin-bottom: 20px;
+}
+
 /* CONTACT PAGE */
 .office-details ul li {
     list-style-type: none;
