--- a/css/styles.css
+++ b/css/styles.css
@@ -18,6 +18,7 @@ COLOR PALLETE
 
 body {
   text-align: center;
+  background-color: #ffffffee;
 }
 
 .nav-item:hover {
@@ -40,9 +41,9 @@ body {
 } */
 
 .contact-us-cta {
-  color: white !important;
+  color: rgb(255, 255, 255) !important;
   border: 1px solid black;
-  background-color: #cc3636;
+  background-color: #188633;
   border-radius: 4px;
   list-style-type: none;
   text-decoration: none;
@@ -263,6 +264,11 @@ footer {
   border: none;
 }
 
+/* FAQ collapse will be showing two different result based on the screen size. see m.query for more detais */
+.lg-screen-collapse {
+  display: none;
+}
+
 /* EVENTS PAGE */
 .events-header {
   font-weight: 700;
@@ -293,5 +299,13 @@ footer {
 @media only screen and (min-width: 992px) {
   h1 {
     font-size: 150px;
+  }
+
+  .lg-screen-collapse {
+    display: block;
+  }
+
+  .sm-screen-collapse {
+    display: none;
   }
 }
