--- a/css/styles.css
+++ b/css/styles.css
@@ -238,13 +238,14 @@ footer {
   width: 100%;
   background-color: black;
   color: white;
-  height: 20px;
+  height: 30px;
   margin: 0%;
 }
 
-/* .bottom, p {
-  margin-bottom: 0% !important;
-} */
+footer, p {
+  padding: 2px 0px;
+}
+
 
 /* FAQs PAGE */
 .faq-section,
